# week1group4-v2

./: .gitignore  README.md  SETUP_GUIDE.md  TEST_INSTRUCTIONS.md  WIRING_REFERENCE.md  config.yaml  curtain_control_server.py  pyproject.toml  run.sh  test_mode_sync.py
curtain_control/: arduino_curtain_enhanced.ino  curtain_control.ino
server/: config.py  database.py  main.py  models.py  mqtt_client.py  serial_manager.py
server/templates/: index.html
